crates/eden-file-diagnostics/src/renderer/snapshots/eden_file_diagnostics__renderer__tests__render_error_with_label.snap
---
source: crates/eden-file-diagnostics/src/renderer/mod.rs
expression: rendered.to_string()
---
error: unused variable
  ┌─ test.rs:1:5
  │
1 │ let x = 42;
  │     ^ variable `x` is never used
